--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,23 @@
 Package: dogmar
 Title: PKG_TITLE
 Version: 0.0.0.9000
-Authors@R: 
-    c(person(given = "Miguel",
-           family = "González-Valdés Tejero",
-           role = c("aut", "cre"), # There must be a "cre", but there can only be one
-           email = "s233139@student.dtu.dk"), 
-    person(given = "Eszter",
-           family = "Kovács",
-           role = "aut",
-           email = "s233083@dtu.dk"))
+Authors@R: c(
+    person("Miguel", "González-Valdés Tejero", , "s233139@student.dtu.dk", role = c("aut", "cre")),
+    person("Eszter", "Kovács", , "s233083@dtu.dk", role = "aut")
+  )
 Description: PKG_DESC.
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
+    ggplot2,
     golem (>= 0.4.1),
-    pkgload,
     shiny (>= 1.7.5)
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
+VignetteBuilder: knitr
