--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Authors@R: c(
 Description: PKG_DESC.
 License: MIT + file LICENSE
 Imports: 
+    centralDogma,
     config (>= 0.3.1),
     ggplot2,
     golem (>= 0.4.1),
@@ -16,8 +17,9 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
+VignetteBuilder: 
+    knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-VignetteBuilder: knitr
